# oa-count

./: CMakeLists.txt  LICENSE  README.md
docs/: Implementation.md
examples/: oa_00_in.txt  oa_01_in.txt
include/: config.h  file.h  helper.h  log.h  macro.h  math.h  timer.h
src/: file.c  helper.c  log.c  main.c  math.c  timer.c
